[tool.poetry]
name = "alchemy-sdk"
version = "0.1.0"
description = "An unofficial Python SDK for the Alchemy API"
authors = ["Abe M <abe.malla8@gmail.com>"]
readme = "README.md"
packages = [{include = "alchemy_sdk"}]

[tool.poetry.dependencies]
python = ">= 3.9"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
