[project]
name = "pyalchemy"
version = "1.0.0"
authors = [
  { name="Abe" },
]
description = "Unofficial Python SDK for the Alchemy API"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
keywords = [
    "opensea",
    "api",
    "sdk",
    "python",
    "nft",
    "erc721",
    "erc1155",
    "ethereum",
    "crypto",
    "cryptocurrency",
    "alchemy",
    "web3",
    "alchemy-sdk",
]
dependencies = [
    "aiohttp>=3.8",
    "aiodns>=3.0",
]

[project.urls]
"Homepage" = "https://github.com/FastestMolasses/alchemy-sdk"
"Bug Tracker" = "https://github.com/FastestMolasses/alchemy-sdk/issues"

[tool.poetry]
name = "alchemy-sdk"
version = "0.1.0"
description = "An unofficial Python SDK for the Alchemy API"
authors = ["Abe M <abe.malla8@gmail.com>"]
readme = "README.md"
packages = [{include = "alchemy_sdk"}]

[tool.poetry.dependencies]
python = ">= 3.9, < 4"
aiohttp = "^3.8"
aiodns = "^3.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.241"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [".pytest_cache"]
ignore-init-module-imports = true

[tool.ruff.mccabe]
max-complexity = 10
